--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -139,15 +139,18 @@ body {
 }
 
 .shop-name, .food-name {
-    margin-bottom: 5px;
     font-weight: 600;
     font-size: 16px;
 }
 
 .shop-content .shop-starrating {
     position: relative;
-    top: 5px;
+    top: 10px;
     line-height: 10px;
+}
+
+.shop-monthsales {
+	margin-top: -15px;
 }
 
 .shop-info {
